# fastctx

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  README.zh-CN.md  THIRD_PARTY_LICENSES.md  about.toml  build.rs  deny.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
scripts/: finalize-release-assets.ps1  pack-npm-root.ps1  stage-npm-package.ps1  stage-release-archive.ps1  verify-distribution-contract.ps1  verify-launcher-lifecycle.js  verify-npm-install.ps1  verify-release-assets.ps1  verify-release-identity.ps1
src/: binary.rs  bounded_sort.rs  budget.rs  edit_server.rs  encoding.rs  file_executor.rs  file_snapshot.rs  glob_tool.rs  grep_sink.rs  grep_tool.rs  lib.rs  main.rs  model.rs  operation.rs  ordered_window.rs  parallel.rs  path_codec.rs  paths.rs  process_identity.rs  process_policy.rs  render_plan.rs  search_parallelism.rs  search_text.rs  server.rs  server_manifest.rs  server_support.rs  shell_server.rs  stdio_transport.rs  traversal.rs
src/cli/: mod.rs
src/control/: agents.rs  apply.rs  codex_config.rs  config_i18n.rs  doctor.rs  i18n.rs  job_i18n.rs  leftovers.rs  mod.rs  paths.rs  processes.rs  settings.rs  transaction.rs
src/edit/: document.rs  locks.rs  mod.rs  private_storage.rs  replace.rs
src/edit/private_storage/: unix.rs  windows.rs
src/encoding/: reference_v011.rs  snapshot_pipeline.rs
src/read_tool/: batch.rs  hex_file.rs  image_file.rs  mod.rs  pdf.rs  pdf_disabled.rs  pdf_engine.rs  text_file.rs
src/shell/: apply_patch_hint.rs  bash.rs  buffer.rs  encoding.rs  foreground.rs  mod.rs  normalize.rs  output.rs  process.rs
src/shell/jobs/: admission.rs  host.rs  identity.rs  mod.rs  model.rs  output_log.rs  spool.rs  store.rs
src/tui/: app.rs  config.rs  jobs.rs  migration.rs  mod.rs  theme.rs  update.rs  view.rs
src/update/: cache.rs  check.rs  helper.rs  mod.rs  model.rs  npm_invocation.rs
tests/: cli_apply_golden.rs  cli_contract.rs  comment_language.rs  compat_v011_contract.rs  edit_contract.rs  glob_contract.rs  grep_contract.rs  parent_watch_contract.rs  path_codec_contract.rs  pdf_contract.rs  property_contract.rs  read_contract.rs  read_hex_contract.rs  server_contract.rs  shell_contract.rs
tests/common/: mod.rs
tests/compat/v0_1_1/: fixture-spec.json  manifest.json
tests/compat/v0_1_1/cases/glob-all-files/: determinism-certificate.json  expected.meta.json  expected.text  request.json  stability.json
tests/compat/v0_1_1/cases/glob-modified-page/: determinism-certificate.json  expected.meta.json  expected.text  request.json  stability.json
tests/compat/v0_1_1/cases/glob-path-many-page-one/: determinism-certificate.json  expected.meta.json  expected.text  request.json  stability.json
tests/compat/v0_1_1/cases/glob-path-many-page-two/: determinism-certificate.json  expected.meta.json  expected.text  request.json  stability.json
tests/compat/v0_1_1/cases/glob-path-one/: determinism-certificate.json  expected.meta.json  expected.text  request.json  stability.json
tests/compat/v0_1_1/cases/glob-path-zero/: determinism-certificate.json  expected.meta.json  expected.text  request.json  stability.json
tests/compat/v0_1_1/cases/grep-glob-filter/: determinism-certificate.json  expected.meta.json  (+3 more)
tests/compat/v0_1_1/provenance/: capture-log.json  cargo-lock.sha256  generator-source.sha256  oracle-binaries.sha256  oracle-source-tree.sha256  release-assets.json  release-assets.sha256  source.json  toolchains.json
tools/: verify-v011-assets.py
tools/compat-v011-capture/: Cargo.toml  README.md
tools/compat-v011-capture/src/: capture.rs  fixture.rs  main.rs  mcp.rs  model.rs
(+90 files in other folders)
